Manilla 2D Customizer changelog

Nov-29-2008
v0.25.227
- added new dialog with 1 option "Don't update Weather Tab", so you can choose if you
    want to use your existing weather settings or use the new weather settings

Nov-24-2008
v0.24.225
- fixed background bug, only worked with "\Windows\ManilaGFX" folder, now works with
    "\Windows" folder too.
- fixed some formatting on the m2dct inside of a zip file warning box
- moved some code around so you are not waiting for 5 seconds after you hit apply, 
    now the spinning cursor should come up immediately

Nov-24-2008
v0.23.223
- added a new background page that will let you specify a png image to use as the
    Manila2D background.  Right now there is no way to go back to the "default"
    background, only restoring a theme, or applying a new theme can change your
    background.  This feature only supports "hh_fw_background.png" files that are
    located in "\Windows" and "\Windows\ManilaGFX" which should satisfy 99% of users
    but if you have issues let me know and I will read the value directly from the
    HTCHomeSettings.xml file
- fonts drop down boxes are much larger now, much more easy to read
- added warning about a theme file that contains an m2dct file, hopefully this will
    cut down on some confusion
- updated donator list

Nov-11-2008
v.0.22.215
- added an internet page that allows you to set a different default internet browser
    for Manila 2D build 1.0.1820.3328

Nov-10-2008
v.0.21.213
- added more fonts [Messaging, interent, settings, weather] (Manila2D v20 only)
- added ability to add a folder of themes in the theme manager, this folder will
    be remembered and every time you restart M2DC will look for new themes in that
    folder
- updated donator list (I think)
- fixed build process (again... stupid devenv not knowing how to handle dependencies)
- uninstaller no longer applies your backed up theme

Nov-04-2008
v0.20.207